--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
     "browserify": "^5.9.1",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "^1.0.1",
-    "gulp-concat": "*",
-    "gulp-minify-css": "*",
-    "gulp-sass": "*",
+    "gulp-concat": "~2.4.2",
+    "gulp-minify-css": "~0.3.11",
+    "gulp-sass": "~1.1.0",
     "gulp-sync": "^0.1.3",
-    "gulp-uglify": "*",
+    "gulp-uglify": "~1.0.1",
     "gulp-util": "^3.0.0",
     "gulp-webserver": "^0.4.0",
     "gulp-phonegap-build": "0.1.3",
-    "vinyl-source-stream": "*",
-    "watch": "*",
+    "vinyl-source-stream": "^0.1.1",
+    "watch": "~0.13.0",
 
-    "intl": "*",
+    "intl": "~0.1.4",
     "react": "~0.12",
     "react-intl": "1.0.0",
     "reactify": "^0.15.2",
 
-    "async": "*",
-    "jwerty": "*",
-    "localforage": "*"
+    "async": "~0.9.0",
+    "jwerty": "~0.3.2",
+    "localforage": "~1.1.1"
   },
+
   "devDependencies": {
     "lorem": "^0.4.0",
     "wget": "0.0.1"
